--- a/Beispielprojekt/Beispielprojekt.vcxproj.filters
+++ b/Beispielprojekt/Beispielprojekt.vcxproj.filters
@@ -24,9 +24,6 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Planet.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Vektor2d.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -35,28 +32,11 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Beispielprojekt.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Planet.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Vektor2d.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <Image Include="planet1.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="planet2.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="planet3.png">
-      <Filter>Resource Files</Filter>
-    </Image>
-    <Image Include="rakete.png">
-      <Filter>Resource Files</Filter>
-    </Image>
+    <ClCompile Include="Tank.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
